--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "body-parser": "1.12.3",
     "connect-timeout": "^1.7.0",
     "cookie-parser": "^1.3.5",
+    "cookie-session": "^2.0.0-beta.1",
     "ejs": "2.3.1",
     "express": "4.12.3",
-    "leanengine": "^2.0.0"
+    "express-ws": "^3.0.0",
+    "leanengine": "^2.0.0",
+    "request-json": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
