--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "express": "4.12.3",
     "leanengine": "^2.0.0",
     "moment": "^2.18.1",
+    "npm": "^6.5.0",
     "request-json": "^0.6.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.18.9"
   },
   "engines": {
     "node": "6.x"
